<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anhnguyen.homeshopping.app.LoginActivity"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/editTxt_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/fab_padding_nsmall"
            android:textColorHint="@color/mediumGray"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/editTxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/editTxt_password"
            android:inputType="textPassword"
            android:padding="@dimen/fab_padding_nsmall"
            android:textColorHint="@color/mediumGray"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/btn_submit_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin_large"
            android:background="@drawable/red_btn_states"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:clickable="true"
            android:text="@string/txt_forgotPassword" />
    </LinearLayout>
</LinearLayout>
